- golocs updated - Updated the block list for Mark spell to allow teleporting to Heartwood and T2A. - Decreased the drop rate for dragon scales. - Added Sand Dwellers and new spiders for T2A area. - Some Tokuno monsters now talk. - Added gargoyle names to random name generator list. - Added more Elf and Gargoyle handling to random NPC townspeople creation scripts. - Dragon scales are now grouped along with Hides in the Sell Options. - Some fixes to the Champion Spawn scripts. - Vampire invasion in Vesper has been disabled. - T2A region spawns were added. - Merchant quests for Zento and Delucia have been enabled. - Boat module has been updated.

--- a/099/config/golocs.cfg
+++ b/099/config/golocs.cfg
@@ -13,9 +13,9 @@ goloc masterlist
 	location cove
 	location empathabby
 	location jhelombank
-	location maginciabank
 	location moonglowbank
 	location minocbank
+	location newmaginciabank
 	location nujelmbank
 	location ocllobank
 	location serpentholdbank
@@ -25,11 +25,12 @@ goloc masterlist
 	location seamarket
 
 	location PAGEBREAK
+	location delucia
+	location zento
+	location heartwood
 	location verlorreg
 	location luna
 	location umbra
-	location zento
-	location heartwood
 	location royalcity
 	location holycity
 
@@ -184,12 +185,12 @@ goloc all bucdendocks
 	z	0
 }
 
-goloc all maginciabank
+goloc all newmaginciabank
 {
-	desc	Magincia bank
-	x	3717
-	y	2187
-	z	20
+	desc	New Magincia bank
+	x	3773
+	y	2259
+	z	30
 }
 
 goloc all moonglowbank
@@ -398,7 +399,7 @@ goloc all umbra
 
 goloc all zento
 {
-	desc	Zento
+	desc	Zento bank
 	x	738
 	y	1258
 	z	30
@@ -438,6 +439,15 @@ goloc all heartwood
 	x	7057
 	y	383
 	z	0
+	realm britannia
+}
+
+goloc all delucia
+{
+	desc	Delucia bank
+	x	5272
+	y	3990
+	z	37
 	realm britannia
 }
 
