--- a/099/pkg/npcs/hostiles/evilhumans/npc_lootgroups.cfg
+++ b/099/pkg/npcs/hostiles/evilhumans/npc_lootgroups.cfg
@@ -353,7 +353,93 @@ lootgroup masterassassin
 	magic_group	clothing			6
 }
 
+lootgroup sanddweller
+{
+	gold		5d25+150
+	Item		Level2map			1		10
+	Item		Level3map			1		10
+	Item		VialOfBlood		2		100
+	Random	AllWeapons		1d2-1	75
+	Random	Potions			1d2		50
+	Random	Junk				1d3-1	50
 
+	magic_quality	5
+	magic_group	allweapons		9
+	magic_group	allarmor			9
+}
+
+lootgroup sanddwellerwarrior
+{
+	gold		5d50+250
+	Item		Level3map			1		10
+	Item		Level4map			1		10
+	Item		VialOfBlood		2		100
+	Random	AllWeapons		1d2-1		75
+	Random	Potions			1d2		50
+	Random	Junk				1d3-1		50
+
+	magic_quality	9
+	magic_group	allweapons		12
+	magic_group	platemailarmor		6
+	magic_group	allarmor			12
+}
+
+lootgroup sanddwellersniper
+{
+	gold		5d60+100
+	Item		Level3map			1		10
+	Item		Level4map			1		10
+	item		GreaterExplosionPotion	2d2		50
+	Random	AllWeapons		1d2-1		75
+	Random	Potions			1d2		50
+	Random	Junk				1d3-1		50
+
+	magic_quality	7
+	magic_group	bows				8
+	magic_group	allweapons		2
+	magic_group	allarmor			6
+}
+
+lootgroup sanddwellerchief
+{
+	gold		5d75+500
+	Item		VialOfBlood		2		100
+	Item		Level3map			1		10
+	Item		Level4map			1		10
+	Item		Level5map			1		10
+	Random	AllWeapons		1d2-1	75
+	Random	Potions			2d2		50
+	Random	Junk				1d3-1	50
+
+	chest_chance	5
+	chest_quality	8
+
+	magic_quality	9
+	magic_group	allweapons		15
+	magic_group	platemailarmor		8
+	magic_group	allarmor			12
+}
+
+lootgroup sanddwellerdruid
+{
+	gold		3d100+300
+	Item		VialOfBlood		2		100
+	Item		Level3map			1		10
+	Item		Level4map			1		5
+	Random	Circle7Scrolls		1		25
+	Random	Circle8Scrolls		1		25
+	Random	Potions			1d2		50
+	Random	Gems				1d2		50
+	Random	Junk				1d3-1		50
+
+	magic_quality	7
+	magic_group	wands			8
+	magic_group	mageweapons		10
+	magic_group	allweapons		8
+	magic_group	studdedarmor		10
+	magic_group	allarmor			6
+	magic_group	clothing			6
+}
 
 
 
