--- a/099/pkg/npcs/hostiles/evilhumans/npcdesc.cfg
+++ b/099/pkg/npcs/hostiles/evilhumans/npcdesc.cfg
@@ -295,6 +295,7 @@ NpcTemplate covensister
 	dress			mage
 	hostile			1
 	virtue			5
+	saywords			1
 }
 
 NpcTemplate apostleofthepillar
@@ -337,6 +338,7 @@ NpcTemplate apostleofthepillar
 	fire				strong
 	hostile			1
 	virtue			5
+	saywords			1
 }
 
 NpcTemplate rogueknight
@@ -914,4 +916,203 @@ NpcTemplate masterassassin
 	hostile			1
 	virtue			3
 	weapon_poison		5
+}
+
+NpcTemplate  sanddweller
+{
+	Name			<random> the sand dweller
+	script		:evilhumans:ai_killpcs_smart_default
+	ObjType		0x190
+	Color		33784
+	TrueColor		33784
+	colorrange	human
+	Gender		2
+	STR			150
+	INT			50
+	DEX			100
+	HITS			150
+	MANA			0
+	STAM			100
+
+	AttackSpeed		32
+	AttackDamage		4d4+8
+	AttackAttribute	Swordsmanship
+	AttackHitScript	:npchitscripts:defaulthitscript
+	AttackHitSound		0x23D
+	AttackMissSound	0x239
+	AR				35
+
+	Tactics			100
+	Swordsmanship		110
+	Macefighting		110
+	Fencing			110
+	Hiding			70
+
+	dress			weakwarrior
+	hostile			1
+}
+
+NpcTemplate sanddwellerwarrior
+{
+	Name			<random> the sand dweller warrior
+	script		:evilhumans:ai_killpcs_smart_default
+	ObjType		0x190
+	Color		33784
+	TrueColor		33784
+	colorrange	human
+	Gender		2
+	STR			220
+	INT			40
+	DEX			110
+	HITS			220
+	MANA			40
+	STAM			110
+
+	AttackSpeed		50
+	AttackDamage		7d6+8
+	AttackAttribute	Swordsmanship
+	AttackHitScript	:npchitscripts:defaulthitscript
+	AttackHitSound		0x23D
+	AttackMissSound	0x239
+	AR				55
+
+	Tactics			110
+	Wrestling			120
+	MagicResistance	90
+	Swordsmanship		120
+	Macefighting		120
+	Fencing			120
+	Hiding			80
+
+	alignment			evil
+	dress			weakwarrior
+	hostile			1
+	virtue			2
+}
+
+NpcTemplate sanddwellersniper
+{
+	Name			<random> the sand dweller sniper
+	script		:hostiles:ai_killpcs_normal_marksman
+	ObjType		0x190
+	Color		33784
+	TrueColor		33784
+	colorrange	human
+	Gender		2
+	STR			150
+	INT			60
+	DEX			150
+	HITS			150
+	MANA			60
+	STAM			150
+
+	AttackSpeed		32
+	AttackDamage		6d6+4
+	AttackAttribute	Archery
+	AttackHitScript	:npchitscripts:defaulthitscript
+	AttackHitSound      0x1B8
+	AttackMissSound     0x239
+	AR				35
+
+	MagicResistance	80
+	Tactics			110
+	Wrestling			110
+	Swordsmanship		110
+	Macefighting		110
+	Fencing			110
+	Archery			130
+
+	ammotype			0x1bfb
+	missileweapon		xbowman
+	ammoamount		50
+
+	alignment			evil
+	virtue			1
+	dress			weakwarrior
+	hostile			1
+}
+
+NpcTemplate sanddwellerchief
+{
+	Name			<random> the sand dweller chief
+	script		:evilhumans:ai_killpcs_smart_default
+	ObjType		0x190
+	Color		33784
+	TrueColor		33784
+	colorrange	human
+	Gender		2
+	STR			350
+	INT			80
+	DEX			180
+	HITS			350
+	MANA			50
+	STAM			180
+
+	AttackSpeed		60
+	AttackDamage		7d6+4
+	AttackAttribute	Swordsmanship
+	AttackHitScript	:npchitscripts:defaulthitscript
+	AttackHitSound		0x23D
+	AttackMissSound	0x239
+	AR				70
+
+	Tactics			120
+	Wrestling			130
+	MagicResistance	100
+	Swordsmanship		130
+	Macefighting		130
+	Fencing			130
+	Hiding			100
+
+	alignment			evil
+	dress			warrior
+	hostile			1
+	virtue			4
+}
+
+NpcTemplate sanddwellerdruid
+{
+	Name			<random> the sand dweller druid
+	script		:hostiles:ai_killpcs_normal_spellcaster
+	ObjType		0x190
+	Color		1102
+	TrueColor		1102
+	colorrange	human
+	Gender		2
+	STR			120
+	INT			200
+	DEX			100
+	HITS			120
+	MANA			200
+	STAM			100
+
+	AttackSpeed		30
+	AttackDamage		4d6
+	AttackAttribute	Fencing
+	AttackHitScript	:npchitscripts:defaulthitscript
+	AttackHitSound		0x023c
+	AttackMissSound	0x23b
+	AR				40
+
+	Tactics			80
+	Fencing			100
+	Hiding			60
+	MagicResistance	80
+	Magery			120
+	Animallore		130
+	EvaluatingIntelligence	100
+
+	spell	:damage_spells:fstrike
+	spell	:damage_spells:ebolt
+	spell	:damage_spells:lightning
+	spell	:statmod_spells:paralyze
+	spell	:druid_spells:tidalwave
+	spell	:druid_spells:stingingswarm
+	spell	:druid_spells:graspingroots
+
+	dress			mage
+	saywords			1
+	alignment			evil
+	virtue			3
+	hostile			1
 }
