--- a/099/pkg/npcs/hostiles/overlandmobs/npcdesc.cfg
+++ b/099/pkg/npcs/hostiles/overlandmobs/npcdesc.cfg
@@ -913,6 +913,144 @@ NpcTemplate greattoad
 	hostile			1
 }
 
+NpcTemplate dspiderqueen
+{
+	Name			A Desert Spider Queen
+	script		:overlandmobs:ai_killpcs_spider
+	ObjType		173
+	Color		2107
+	TrueColor		2107
+	Gender		0
+	STR			525
+	INT			80
+	DEX			100
+	HITS			525
+	MANA			80
+	STAM			100
+
+	AttackSpeed		32
+	AttackDamage		6d6+10
+	AttackAttribute	Wrestling
+	AttackHitScript	:npchitscripts:defaulthitscript
+	AttackHitSound		0x186
+	AttackMissSound	0x239
+	AR				50
+
+	Tactics			100
+	Wrestling			120
+	MagicResistance	100
+
+	alignment		evil
+	virtue			5
+	provoke			120
+	hostile			1
+}
+
+NpcTemplate dspidermale
+{
+	Name			A Male Desert Spider
+	script		:overlandmobs:ai_killpcs_spider
+	ObjType		736
+	Color		2107
+	TrueColor		2107
+	Gender		0
+	STR			250
+	INT			40
+	DEX			70
+	HITS			250
+	MANA			40
+	STAM			70
+
+	AttackSpeed		28
+	AttackDamage		5d6+8
+	AttackAttribute	Wrestling
+	AttackHitScript	:npchitscripts:defaulthitscript
+	AttackHitSound		0x186
+	AttackMissSound	0x239
+	AR				50
+
+	Tactics			90
+	Wrestling			100
+	MagicResistance	80
+
+	alignment		evil
+	tameskill			70
+	food				meat
+	virtue			2
+	provoke			100
+	hostile			1
+}
+
+NpcTemplate dspidertrapdoor
+{
+	Name			A Trapdoor Spider
+	script		:overlandmobs:ai_killpcs_spider
+	ObjType		737
+	Color		2107
+	TrueColor		2107
+	Gender		0
+	STR			650
+	INT			40
+	DEX			80
+	CProp	BonusMaxHP	i-550
+	HITS			100
+	MANA			40
+	STAM			70
+
+	AttackSpeed		32
+	AttackDamage		7d6+12
+	AttackAttribute	Wrestling
+	AttackHitScript	:npchitscripts:defaulthitscript
+	AttackHitSound		0x186
+	AttackMissSound	0x239
+	AR				35
+
+	Tactics			90
+	Wrestling			120
+	MagicResistance	50
+
+	alignment		evil
+	virtue			3
+	provoke			80
+	hostile			1
+}
+
+NpcTemplate dspider
+{
+	Name			A Desert Spider
+	script		:overlandmobs:ai_killpcs_spider
+	ObjType		157
+	Color		2107
+	TrueColor		2107
+	Gender		0
+	STR			100
+	INT			40
+	DEX			70
+	HITS			100
+	MANA			40
+	STAM			70
+
+	AttackSpeed		28
+	AttackDamage		4d6+4
+	AttackAttribute	Wrestling
+	AttackHitScript	:npchitscripts:defaulthitscript
+	AttackHitSound		0x186
+	AttackMissSound	0x239
+	AR				50
+
+	Tactics			80
+	Wrestling			80
+	MagicResistance	70
+	
+	tameskill			100
+	food				meat
+	alignment		evil
+	virtue			1
+	provoke			70
+	hostile			1
+}
+
+
 
 
 
