--- a/099/pkg/world/spawners/regionspawner/regionspawn.cfg
+++ b/099/pkg/world/spawners/regionspawner/regionspawn.cfg
@@ -1438,6 +1438,351 @@ region 236
 	group		yamandonpoint	30
 }
 
+//T2A 1
+region 237
+{
+	rect		5394 3858 5604 4062
+	realm		britannia
+	group		forestanimals 8
+	group		weaklizardmen 20
+	group		mediumlizardmen 10
+}
+
+//T2A 2
+region 238
+{
+	rect		5648 3858 5876 4062
+	realm		britannia
+	group		forestanimals 8
+	group		weaklizardmen 16
+	group		mediumlizardmen 10
+	group		stronglizardmen 8
+}
+
+//T2A 3
+region 239
+{
+	rect		6091 3859 6118 3877
+	realm		britannia
+	group		dracossmall 30
+}
+//T2A 4
+region 240
+{
+	rect		5899 3841 6088 4079
+	realm		britannia
+	group		forestanimals 8
+	group		weaklizardmen 20
+	group		mediumlizardmen 10
+}
+
+//T2A 5
+region 241
+{
+	rect		6112 3938 6137 3972
+	realm		britannia
+	group		dracossmall 30
+}
+
+//T2A Shabooli
+region 242
+{
+	rect		5958 3343 6066 3430
+	realm		britannia
+	group		shabooli 30
+}
+
+//T2A swamp 1
+region 243
+{
+	rect		5898 3341 5960 3450
+	realm		britannia
+	group		weaklizardmen 20
+	group		mediumlizardmen 10
+}
+
+//T2A swamp 2
+region 244
+{
+	rect		5903 3473 6056 3538
+	realm		britannia
+	group		weaklizardmen 20
+	group		mediumlizardmen 10
+}
+
+//T2A swamp 3
+region 245
+{
+	rect		5917 3229 6084 3302
+	realm		britannia
+	group		weaklizardmen 20
+	group		mediumlizardmen 10
+}
+
+//T2A Delucia
+region 246
+{
+	rect		5201 3964 5292 4040
+	realm		britannia
+	group		henchmen		10
+	group		townies		5
+}
+
+//T2A City of the dead
+region 247
+{
+	rect		5199 3646 5241 3680
+	realm		britannia
+	group		strongundead 40
+	group		weakundead 80
+}
+
+//T2A Orc Fort
+region 248
+{
+	rect 		5201 3611 5223 3624
+	realm		britannia
+	group		weakorcs 200
+	group		mediumorcs 100
+	group		strongorcs 50
+}
+
+//T2A 6
+region 249
+{
+	rect 		5172 3781 5355 3902
+	realm		britannia
+	group		henchmen 5
+	group		horses 5
+	group		forestanimals 20
+}
+
+//T2A Desert 1
+region 250
+{
+	rect 		5279 3611 5362 3696
+	realm		britannia
+	group		sanddwellereasy 50
+}
+
+//T2A 7
+region 251
+{
+	rect		6088 3424 6114 3508
+	realm		britannia
+	group		humanoids 80
+	group		stronghumanoids 40
+}
+
+//T2A 8
+region 252
+{
+	rect		5907 3603 6041 3828
+	realm		britannia
+	group		strongforestmonsters 30
+	group		forestanimals 10
+}
+
+//T2A 9
+region 253
+{
+	rect		5641 3594 5872 3827
+	realm		britannia
+	group		strongforestmonsters 30
+	group		forestanimals 10
+}
+
+//T2A 10
+region 254
+{
+	rect		5387 3345 5627 3486
+	realm		britannia
+	group		junglemonsters 30
+}
+
+//T2A 11
+region 255
+{
+	rect		5592 3516 5613 3570
+	realm		britannia
+	group		serpentholdpirates 140
+}
+
+//T2A 12
+region 256
+{
+	rect		5398 3385 5458 3430
+	realm		britannia
+	group		strongtrolls 30
+	group		trolls 70
+}
+
+//T2A Papua
+region 257
+{
+	rect		5672 3137 5804 3286
+	realm		britannia
+	group		evilhuman 35
+	group		serpentholdpirates 35
+}
+
+//T2A Terathan Keep
+region 258
+{
+	rect		5392 3091 5492 3226
+	realm		britannia
+	group		weakterathan 40
+	group		medterathan 15
+}
+
+//T2A Terathan Keep Inside
+region 259
+{
+	rect 5436 3123 5479 3147
+	realm		britannia
+	group		strongterathan 40
+}
+
+//T2A Shallow Sea
+region 260
+{
+	rect		5837 3017 5982 3182
+	realm		britannia
+	group		wyvern 15
+}
+
+//T2A Water 1
+region 261
+{
+	rect		5843 2794 5921 2949
+	realm		britannia
+	group		wyvern 15
+}
+
+//T2A Sea of Harmony
+region 262
+{
+	rect		5884 2662 6091 2780
+	realm		britannia
+	group		waterfriendly 10
+}
+
+//T2A wyvern isle
+region 263
+{
+	rect		5843 2456 5870 2490
+	realm		britannia
+	group		dracos 30
+}
+
+//T2A Sak Teb All
+region 264
+{
+	rect		5652 2854 5798 3010
+	realm		britannia
+	group		diablo 45
+}
+
+//T2A ophidian lair
+region 265
+{
+	rect		5668 2610 5794 2673
+	realm		britannia
+	group		weakophidians 35
+	group		ophidians 15
+	group		strongophidians 7
+}
+
+//T2A Desert 2
+region 266
+{
+	rect		5633 2714 5803 2819
+	realm		britannia
+	group		desert 10
+	group		desertmonsters 25
+}
+
+//T2A Desert Spiders
+region 267
+{
+	rect		5381 2577 5603 2768
+	realm		britannia
+	group		dspidereasy 35
+}
+
+//T2A Spider Oasis
+region 268
+{
+	rect		5517 2599 5566 2643
+	realm		britannia
+	group		dspiderhard 15
+}
+
+//T2A Desert Spiders 2
+region 269
+{
+	rect		5286 2488 5343 2543
+	realm		britannia
+	group		dspiderhard 30
+}
+
+//T2A Desert Spiders 3
+region 270
+{
+	rect		5387 2489 5587 2562
+	realm		britannia
+	group		dspidereasy 35
+}
+
+//T2A Desert 3
+region 271
+{
+	rect		5415 2845 5619 2965
+	realm		britannia
+	group		desert 10
+	group		desertmonsters 20
+}
+
+//T2A Sand Dwellers Center
+region 272
+{
+	rect		5717 2524 5761 2547
+	realm		britannia
+	group		sanddwellerhard 50
+}
+
+//T2A Dspider 4
+region 273
+{
+	rect		5126 2440 5160 2514
+	realm		britannia
+	group		dspiderhard 45
+}
+
+//T2A Wyvern Point
+region 274
+{
+	rect		5137 2600 5185 2614
+	realm		britannia
+	group		dracos 50
+}
+
+//T2A J'Fer Sok
+region 275
+{
+	rect		5222 2850 5374 3031
+	realm		britannia
+	group		wyvern 15
+}
+
+//T2A Sand Dwellers
+region 276
+{
+	rect		5631 2469 5806 2571
+	realm		britannia
+	group		sanddwellereasy 35
+}
+
 
 
 
@@ -2965,3 +3310,73 @@ group yamandonpoint
 	
 }
 
+group dracossmall
+{
+	npc	:dragons:drake1
+	npc	:dragons:drake1
+	npc	:dragons:dragon1
+	npc	:dragons:ancientdragon2
+}
+
+group wyvern
+{
+	npc	:dragons:wyvern
+	npc	:dragons:wyvern
+	npc	:dragons:wyvern
+	npc	:dragons:wyvern
+	npc	:dragons:wyvern
+	npc	:dragons:wyvern
+}
+
+group waterfriendly
+{
+	npc	:wild_animals:dolphin
+	npc	:wild_animals:dolphin
+	npc	:wild_animals:dolphin
+	npc	:wild_animals:walrus
+	npc	:wild_animals:walrus
+}
+
+group dspidereasy
+{
+	npc	:overlandmobs:dspider
+	npc	:overlandmobs:dspider
+	npc	:overlandmobs:dspider
+	npc	:overlandmobs:dspider
+	npc	:overlandmobs:dspider
+	npc	:overlandmobs:dspidermale
+	npc	:overlandmobs:dspidermale
+}
+
+group dspiderhard
+{
+	npc	:overlandmobs:dspidertrapdoor
+	npc	:overlandmobs:dspidertrapdoor
+	npc	:overlandmobs:dspidertrapdoor
+	npc	:overlandmobs:dspiderqueen
+	npc	:overlandmobs:dspiderqueen
+}
+
+group sanddwellereasy
+{
+	npc	:evilhumans:sanddweller
+	npc	:evilhumans:sanddweller
+	npc	:evilhumans:sanddweller
+	npc	:evilhumans:sanddweller
+	npc	:evilhumans:sanddweller
+	npc	:evilhumans:sanddwellerwarrior
+	npc	:evilhumans:sanddwellerwarrior
+	npc	:evilhumans:sanddwellerdruid
+}
+
+group sanddwellerhard
+{
+	npc	:evilhumans:sanddwellersniper
+	npc	:evilhumans:sanddwellersniper
+	npc	:evilhumans:sanddwellerwarrior
+	npc	:evilhumans:sanddwellerwarrior
+	npc	:evilhumans:sanddwellerchief
+	npc	:evilhumans:sanddwellerchief
+	npc	:evilhumans:sanddwellerdruid
+	npc	:evilhumans:sanddwellerdruid
+}
