--- a/099/pkg/npcs/hostiles/overlandmobs/npc_lootgroups.cfg
+++ b/099/pkg/npcs/hostiles/overlandmobs/npc_lootgroups.cfg
@@ -287,3 +287,104 @@ lootgroup carve_greattoad
 	Item		hide				4		100
 	Item		rawrib			4		100
 }
+
+lootgroup dspiderqueen
+{
+	gold		5d80+1000
+	item		Spidersilk		10		100
+	Item		Sand			20d6		100
+	Item		level4map			1		1
+	Item		level5map			1		1
+	Random	Circle7Scrolls		2		10
+	Random	Circle8Scrolls		1		10
+	Random	NecroScrolls		1d3-1	5
+	Random	Gems				2d4		50
+	Random	AllWeapons		1d3		50
+	Random	AllArmor			1d3		50
+	Random	Reagents			3d8		50
+	Random	Potions			2d2		50
+	Random	Junk				1d3		50
+
+	magic_quality	10
+	magic_group	wands			12
+	magic_group	allweapons		18
+	magic_group	allarmor			6
+	magic_group	studdedarmor		6
+	magic_group	platemailarmor		6
+	magic_group	clothing			12
+}
+
+lootgroup dspidermale
+{
+	gold		5d80+500
+	item		Spidersilk		10		100
+	Item		Sand			15d6		100
+	Item		level4map			1		1
+	Item		level5map			1		1
+	Random	Circle7Scrolls		2		10
+	Random	Circle8Scrolls		1		10
+	Random	NecroScrolls		1d3-1	5
+	Random	Gems				2d4		50
+	Random	AllWeapons		1d3		50
+	Random	AllArmor			1d3		50
+	Random	Reagents			3d8		50
+	Random	Potions			2d2		50
+	Random	Junk				1d3		50
+
+	magic_quality	8
+	magic_group	wands			6
+	magic_group	allweapons		18
+	magic_group	allarmor			12
+	magic_group	clothing			12
+}
+
+lootgroup dspidertrapdoor
+{
+	gold		5d80+750
+	item		Spidersilk		10		100
+	Item		Sand			18d6		100
+	Item		level4map			1		1
+	Item		level5map			1		1
+	Random	Circle7Scrolls		2		10
+	Random	Circle8Scrolls		1		10
+	Random	NecroScrolls		1d3-1	5
+	Random	Gems				2d4		50
+	Random	AllWeapons		1d3		50
+	Random	AllArmor			1d3		50
+	Random	Reagents			3d8		50
+	Random	Potions			2d2		50
+	Random	Junk				1d3		50
+
+	magic_quality	8
+	magic_group	wands			6
+	magic_group	allweapons		18
+	magic_group	allarmor			12
+	magic_group	clothing			12
+}
+
+lootgroup dspider
+{
+	gold		5d80+250
+	item		Spidersilk		10		100
+	Item		Sand			10d6		100
+	Item		level4map			1		1
+	Item		level5map			1		1
+	Random	Circle7Scrolls		2		10
+	Random	Circle8Scrolls		1		10
+	Random	NecroScrolls		1d3-1	5
+	Random	Gems				2d3		50
+	Random	AllWeapons		1d3		50
+	Random	AllArmor			1d3		50
+	Random	Reagents			3d8		50
+	Random	Potions			2d2		50
+	Random	Junk				1D3-1	50
+
+	chest_chance	5
+	chest_quality	8
+
+	magic_quality	7
+	magic_group	wands			6
+	magic_group	allweapons		15
+	magic_group	allarmor			12
+	magic_group	clothing			9
+}
