--- a/trunk/099/pkg/npcs/hostiles/tokuno/npcdesc.cfg
+++ b/trunk/099/pkg/npcs/hostiles/tokuno/npcdesc.cfg
@@ -80,6 +80,7 @@ NpcTemplate bakekitsune
 	provoke			95
 	hostile			1
 	fire				strong
+	saywords			1
 }
 
 NpcTemplate crane
@@ -530,6 +531,7 @@ NpcTemplate ladyofthesnow
 	poison			strong
 	cold				strong
 	electrical			strong
+	saywords			1
 }
 
 NpcTemplate oni
@@ -583,6 +585,7 @@ NpcTemplate oni
 	hostile			1
 	poison			strong
 	fire				strong
+	saywords			1
 }
 
 NpcTemplate revenantlion
@@ -806,6 +809,7 @@ NpcTemplate yomotsuelder
 	fire				weak
 	electrical			weak
 	poison			weak
+	saywords			1
 }
 
 NpcTemplate yomotsupriest
@@ -857,6 +861,7 @@ NpcTemplate yomotsupriest
 	fire				weak
 	electrical			weak
 	poison			weak
+	saywords			1
 }
 
 NpcTemplate yomotsuwarrior
@@ -988,6 +993,7 @@ NpcTemplate eliteninja
 	saywords			1
 	hostile			1
 	cold				weak
+	saywords			1
 }
 
 NpcTemplate ronin
@@ -1029,6 +1035,7 @@ NpcTemplate ronin
 	hostile			1
 	dress				platetokuno
 	cold				weak
+	saywords			1
 }
 
 
