--- a/trunk/099/pkg/npcs/names.cfg
+++ b/trunk/099/pkg/npcs/names.cfg
@@ -6911,12 +6911,62 @@ Names 16
 
 Names 17
 {
-	Count 1
-	Name1	GargoyleMale
+	Count 26
+	Name1	Anmanivas
+	Name2	Au'Rek
+	Name3	Bolesh
+	Name4	Foranamo
+	Name5	Ga'Kop
+	Name6	G'Krill
+	Name7	Hir'Roffe
+	Name8	Inwisloklem
+	Name9	Inamo
+	Name10	Naxatilor
+	Name11	Palos
+	Name12	Sai'Gem
+	Name13	Sin'Vraal
+	Name14	Teregus
+	Name15	Valkadesh
+	Name16	Zoterios
+	Name17	Agralem
+	Name18	Beninort
+	Name19	Ansikart
+	Name20	Aurvidlem
+	Name21	Aurlem
+	Name22	Draxsom
+	Name23	ForLem
+	Name24	Inforlem
+	Name25	Laplem
+	Name26	Naxator
 }
 
 Names 18
 {
-	Count 1
-	Name1	GargoyleFemale
+	Count 26
+	Name1	Ansikart
+	Name2	Ane'Ska
+	Name3	Artaios
+	Name4	Aurvidlem
+	Name5	Betra
+	Name6	Forskis
+	Name7	Inmanilem
+	Name8	Khalora
+	Name9	Quaeven
+	Name10	Runeb
+	Name11	Silamo
+	Name12	Sil'Cor
+	Name13	Tir'Pena
+	Name14	T'Lem
+	Name15	Zu'Teika
+	Name16	Ansiraal
+	Name17	Fodus
+	Name18	Forbrak
+	Name19	Horffe
+	Name20	Invis
+	Name21	Quaeven
+	Name22	Sarpling
+	Name23	Tereg
+	Name24	Volesh
+	Name25	Vraal
+	Name26	WisSur
 }
